Fix label alignment.

--- a/grinder-console-service/resources/static/main.css
+++ b/grinder-console-service/resources/static/main.css
@@ -108,6 +108,7 @@ body {
 
 #content .label label {
   float: right;
+  text-align:right;
   color: #101010;
 }
 
